-
Bug
-
Resolution: Done
-
P2: Important
-
6.2.4
-
macOS Monterey and Windows 11
-
-
f8409b6e9c (qt/qtbase/dev) f8409b6e9c (qt/tqtc-qtbase/dev) bc6a754b73 (qt/tqtc-qtbase/6.2)
Mouse scroll doesn't work when mouse is on some part of an grayed out kit on the Kit Selection Window.
A demonstration of this bug can be seen on the attached video.
- is duplicated by
-
QTCREATORBUG-27580 Mouse wheel doesn't scroll when pointer over disabled button
-
- Closed
-