QAbstractButton: do not steal wheel event when disabled

Fixes: QTBUG-102091
Change-Id: I9a6683ad94a739c9997ebc68dd4ca8cf05438c45
Reviewed-by: Eike Ziller <eike.ziller@qt.io>
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit f8409b6e9c7f9a303fc78061182ce06de9bc795e)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>